--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 certifi==2018.11.29
 chardet==3.0.4
+Click==7.0
 idna==2.8
-requests==2.21.0
+pur==5.2.1
+requests==2.22.0
 tqdm==4.28.1
-urllib3==1.24.1
-    
+urllib3==1.25.3
